--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
